# RapidWhisper

./: .env.example  .gitignore  AGENTS.md  ASSISTANT_STYLE_RULES.md  BUILD_CROSS_PLATFORM.md  BUILD_NOTES.md  BUILD_QUICK.md  CHANGELOG_ABOUT_SECTION.md  CHANGELOG_ALWAYS_ON_TOP.md  CHANGELOG_CURSORS.md  CHANGELOG_CUSTOM_PROVIDERS.md  CHANGELOG_DRAGGABLE_WINDOW.md  CHANGELOG_GROUPBOX_STYLE.md  CHANGELOG_HOTKEY_INPUT.md  CHANGELOG_HOTKEY_RESET.md  CHANGELOG_RECORDINGS_STRUCTURE.md  CHANGELOG_STARTUP_WINDOW_CENTER.md  CHANGELOG_UI_UPDATE.md  CHANGELOG_WINDOW_PRESETS.md  CHANGELOG_v1.2.0.md  CONFIG_README.md  CROSS_PLATFORM_BUILD.md  DISTRIBUTION_CHECKLIST.md  ENV_TO_JSON_MIGRATION_COMPLETE.md  FIX_SETTINGS_WINDOW_CENTER.md  FIX_WINDOW_PRESETS.md  GITHUB_ACTIONS_FIX.md  GROUPBOX_DESIGN_GUIDE.md  HOTKEY_FIX_SUMMARY.md  HOTKEY_INPUT_GUIDE.md  HOTKEY_RESET_GUIDE.md  HTML_FORMATTING_EXPLANATION.md  ICONS_SETUP.md  INSTALL.txt  LANGUAGES_FEATURE.md  LANGUAGE_CODE_FIX.md  LANGUAGE_SWITCHING_FIXES.md  LANGUAGE_SWITCHING_IMPLEMENTATION.md  LICENSE  LICENSE_CLARIFICATION.md  (+85 more)
core/: __init__.py  config.py  config_loader.py  config_saver.py  prompt_defaults.py  state_manager.py  statistics_manager.py
design_system/: __init__.py  style_constants.py  styled_window_mixin.py  window_themes.py
docs/: APPDATA_SETTINGS.md  BUILD_EXE.md  CHANGELOG.md  COMBINED_PROCESSING_MODE.md  CONFIG_MIGRATION.md  CUSTOM_PROVIDERS.md  FALLBACK_FORMATTING.md  FORMATTING_FEATURE.md  FORMATTING_IMPLEMENTATION_SUMMARY.md  FORMATTING_UI_GUIDE.md  INDEX.md  LOCALIZATION.md  README_RU.md  WEB_APPS_SUPPORT.md  (+10 more)
(+195 files in other folders)
